fixed contrast

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ main section {
 	width: 100%;
 	height: 100%;
 	margin: 20px auto;
-	color: white;
+	color: #d1d1d1;
 	display: block;
 }
 .project {
@@ -214,7 +214,7 @@ p {
 	padding-left: 20px;
 }
 .btn-projectLink {
-	color: white;
+	color: #d1d1d1;
 	background: #57fa7f;
 	background: -webkit-linear-gradient(top left, #57fa7f, #458aed);
 	background: -moz-linear-gradient(top left, #57fa7f, #458aed);
@@ -246,7 +246,7 @@ p {
 }
 .about {
 	font-family: var(--font1);
-	color: white;
+	color: #d1d1d1;
 	width: 100%;
 }
 .about .proPic {
@@ -259,7 +259,7 @@ p {
 .story {
 	width: 100%;
 	font-size: 15px;
-	color: rgba(214, 213, 213);
+	color: #d1d1d1;
 }
 
 .about p {
@@ -298,7 +298,7 @@ p {
 	font-size: 60px;
 	opacity: 1;
 	text-align: center;
-	color: rgba(194, 194, 194);
+	color: #d1d1d1;
 }
 .contactMe .address {
 	font-family: var(--font2);
